--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: win5072.site4now.net
-        username: mirnaayman-001
+        username: yousef-dev
         password: ${{ secrets.ftp_password }}
